--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@
 # https://gradle.org/
 # https://github.com/gradle/gradle
 
-image: gradle:alpine
+image: gradle:alpine-jdk17
 
 before_script:
   - GRADLE_USER_HOME="$(pwd)/.gradle"
