--- a/build.gradle
+++ b/build.gradle
@@ -19,12 +19,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.projectlombok:lombok:1.18.28'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
-	implementation 'javax.validation:validation-api:2.0.1.Final' // Use the appropriate version
-	implementation 'org.hibernate.validator:hibernate-validator:6.2.0.Final' // Use the appropriate version
+	implementation 'javax.validation:validation-api:2.0.1.Final'
+	implementation 'org.hibernate.validator:hibernate-validator:6.2.0.Final'
 }
 
 tasks.named('test') {
