--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,12 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.1.3'
 	id 'io.spring.dependency-management' version '1.1.3'
+	id "org.sonarqube" version "4.2.1.3168"
+	id 'jacoco'
+}
+
+test {
+	finalizedBy jacocoTestReport // report is always generated after tests run
 }
 
 group = 'nl.fontys.lms'
@@ -26,6 +32,14 @@ dependencies {
 
 	implementation 'javax.validation:validation-api:2.0.1.Final'
 	implementation 'org.hibernate.validator:hibernate-validator:6.2.0.Final'
+}
+
+sonar {
+	properties {
+		property "sonar.projectKey", "LMS-SQ"
+		property "sonar.projectName", "LMS-SQ"
+		property "sonar.qualitygate.wait", true
+	}
 }
 
 tasks.named('test') {
