Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,11 @@ build:
       - build
       - .gradle
 
+scan:
+  stage: test
+  script:
+    - Dsonar.token=$SONARQUBE_TOKEN --info
+
 test:
   stage: test
   script: gradle check
