--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,17 @@ build:
 scan:
   stage: test
   script:
-    - Dsonar.token=$SONARQUBE_TOKEN --info
+    - gradle sonar -Pcoverage -Dsonar.host.url="http://host.docker.internal:9000" -Dsonar.token=$sonar_token --info
+  cache:
+    key: "$CI_COMMIT_REF_NAME"
+    policy: pull
+    paths:
+      - build
+      - .gradle
+
+  dependencies:
+    - test
+
 
 test:
   stage: test
