--- a/build.gradle
+++ b/build.gradle
@@ -6,16 +6,12 @@ plugins {
 	id 'jacoco'
 }
 
-test {
-	finalizedBy jacocoTestReport
-}
-
 jacocoTestReport {
-	dependsOn test
 	reports {
 		xml.required = true
 		csv.required = false
 		html.required = true
+		html.outputLocation = layout.buildDirectory.dir("jacocoHtml")
 	}
 }
 
@@ -57,10 +53,11 @@ sonar {
 		property "sonar.projectName", "LMS-SQ"
 		property "sonar.qualitygate.wait", false
 		property("sonar.host.url", "http://localhost:9000")
-		property "sonar.coverage.jacoco.xmlReportPaths", "${rootDir}/build/reports/jacoco/test/jacocoTestReport.xml"
+//		property "sonar.coverage.jacoco.xmlReportPaths", "${rootDir}/build/reports/jacoco/test/jacocoTestReport.xml"
 	}
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+	finalizedBy jacocoTestReport
 }
