--- a/build.gradle
+++ b/build.gradle
@@ -58,8 +58,7 @@ sonar {
 		property "sonar.projectKey", "LMS-SQ"
 		property "sonar.projectName", "LMS-SQ"
 		property "sonar.qualitygate.wait", false
-		property("sonar.host.url", "http://localhost:9000")
-//		property "sonar.coverage.jacoco.xmlReportPaths", "${rootDir}/build/reports/jacoco/test/jacocoTestReport.xml"
+		property "sonar.host.url", "http://localhost:9000"
 		property "sonar.coverage.exclusions", "**/src/main/java/nl/fontys/lms/configuration/**"
 	}
 }
