--- a/build.gradle
+++ b/build.gradle
@@ -59,11 +59,11 @@ sonar {
 		property "sonar.projectName", "LMS-SQ"
 		property "sonar.qualitygate.wait", false
 		property "sonar.host.url", "http://localhost:9000"
-		property "sonar.coverage.exclusions", "**/src/main/java/nl/fontys/lms/configuration/**"
+		property "sonar.coverage.exclusions", "**/src/main/java/nl/fontys/lms/configuration/**,**/src/main/java/nl/fontys/lms/persistence/**,**/src/main/java/nl/fontys/lms/controller/**,**/src/main/java/nl/fontys/lms/domain/**"
 	}
 }
 
-tasks.named('test') {
+test {
 	useJUnitPlatform()
 	finalizedBy jacocoTestReport
 }
