--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,8 @@ dependencies {
 
 	implementation 'javax.validation:validation-api:2.0.1.Final'
 	implementation 'org.hibernate.validator:hibernate-validator:6.2.0.Final'
+
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 }
 
 sonar {
