--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,10 +34,7 @@ build:
 
 test:
   stage: test
-  script:
-    - ls -l   # Check current directory content
-    - ls -l ./gradlew   # Check gradlew file permissions
-    - bash ./gradlew check
+  script: ./gradlew check
   cache:
     key: "$CI_COMMIT_REF_NAME"
     policy: pull
