--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,7 +34,10 @@ build:
 
 test:
   stage: test
-  script: ./gradlew check
+    script:
+    - ls -l  # Add this line to list permissions
+    - chmod +x ./gradlew
+    - ./gradlew check
   cache:
     key: "$CI_COMMIT_REF_NAME"
     policy: pull
