--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,8 @@ dependencies {
 	implementation 'org.flywaydb:flyway-core'
 	implementation 'org.flywaydb:flyway-mysql'
 	implementation 'mysql:mysql-connector-java:8.0.33'
-	implementation 'com.h2database:h2'
+//	testImplementation 'com.h2database:h2'
+	testRuntimeOnly 'com.h2database:h2'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
