--- a/build.gradle
+++ b/build.gradle
@@ -36,12 +36,13 @@ dependencies {
 	implementation 'org.flywaydb:flyway-core'
 	implementation 'org.flywaydb:flyway-mysql'
 	implementation 'mysql:mysql-connector-java:8.0.33'
-//	testImplementation 'com.h2database:h2'
-	testRuntimeOnly 'com.h2database:h2'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'junit:junit:4.13.1'
+	testImplementation 'org.mockito:mockito-core:3.+'
+	testImplementation 'com.h2database:h2'
 
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
