--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,8 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation 'junit:junit:4.13.1'
 	testImplementation 'org.mockito:mockito-core:3.+'
-	testImplementation 'com.h2database:h2'
+//	testImplementation 'com.h2database:h2'
+	runtimeOnly'com.h2database:h2'
 
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
