--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,5 +4,6 @@
 #spring.datasource.password=password
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.jpa.hibernate.ddl-auto=create-drop
-#
+
+spring.flyway.enabled=false
 jwt.secret=E91E158E4C6656F68B1B5D1C316766DE98D2AD6EF3BFB44F78E9CFCDF5
