Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,10 @@ build:
 test:
   stage: test
   script: gradle test
+  artifacts:
+    when: always
+    paths:
+      - build/reports
 
 sonar:
   stage: sonar
