--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/lms_db
 spring.datasource.username=root
-spring.datasource.password=@264138$U
+spring.datasource.password=password
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
